<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="@layout/loan_plan_activity"
        android:paddingLeft="@dimen/_8dp"
        android:paddingRight="@dimen/_8dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/tvAmount"
              app:layout_constraintTop_toBottomOf="@+id/toolBar"
              app:layout_constraintStart_toStartOf="parent"
              android:text="@string/amount_title"/>
    <TextView android:layout_width="wrap_content"
              android:id="@+id/tvMinMaxAmount"
              android:layout_height="wrap_content"
              app:layout_constraintEnd_toEndOf="parent"
              tools:text="(min_amount/max_amount)"
              app:layout_constraintTop_toBottomOf="@+id/toolBar"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/tvTimeLimit"
              android:text="@string/loan_limit_title"
              app:layout_constraintTop_toBottomOf="@+id/tvAmount"
              app:layout_constraintStart_toStartOf="parent"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@+id/tvAmount"
              android:id="@+id/tvMinMaxTenor"
              tools:text="(min_tenor/max_tenor)"
              app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@+id/tvTimeLimit"
              android:id="@+id/tvInterest"
              android:text="@string/interest"
              app:layout_constraintStart_toStartOf="parent"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@+id/tvTimeLimit"
              android:id="@+id/tvInterestValue"
              tools:text="(interest_rate)"
              app:layout_constraintRight_toRightOf="parent"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="center_vertical"
                  app:layout_constraintTop_toBottomOf="@+id/tvInterest"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/tvBankName"
                  tools:text="Bank 1"/>
        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:scaleType="centerInside"
                   android:adjustViewBounds="true"
                   android:paddingLeft="@dimen/_16dp"
                   android:id="@+id/ivBankLogo"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>